<resources>
    <string name="app_name">VK Extended</string>
    <string name="title_news">Новости</string>
    <string name="title_menu">Меню</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_friends">Друзья</string>
    <string name="title_profile">Профиль</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
</resources>